# mapgen

./: .gitignore  CMakeLists.txt  file_out.txt
include/mapgen/: config.h  data.h  drawer.h  drawer_biomes.h  drawer_elevation.h  generator.h  pass_biomes.h  pass_coast.h  pass_elevation.h  pass_moisture.h  pass_noisy_edges.h  pass_rivers.h  pass_roads.h  pass_towns.h  pass_water.h  rasterizer.h
include/snorri/: bounds.h  noise.h
src/: main.cpp  mapgen.cpp
